--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -1,10 +1,14 @@
+@import "../../assets/css/variable";
 li.chat {
     grid-template-columns: 60px auto 10%;
     gap: 20px;
     list-style:none;
     display: grid;
     padding: 5px 10px;
-    border-top: 1px solid #F8EA6F;
+    border-top: 1px solid $orange;
+    &.active {
+        background-color: $orange;
+    }
     .chat_photo {
         width: 50px;
         border-radius: 50%;
@@ -13,7 +17,7 @@ li.chat {
     }
     .chat_count {
         width: 25px;
-        background-color: #5c56a1;
+        background-color: $lilas;
         border-radius: 50%;
         height: 25px;
         color: #ffffff;
@@ -29,7 +33,7 @@ li.chat {
         white-space: nowrap;
         a {
             text-decoration: none;
-            color: #5C56A1;
+            color: $lilas;
             line-height: 24px;
         }
     }
