--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,6 +1,7 @@
+@import "../../assets/css/variable.scss";
 .btn {
   color: white;
-  background-color: #5C56A1;
+  background-color: $lilas;
   min-width: 200px;
   width: 100%;
   height: 30px;
