--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,18 +1,19 @@
+@import "../../assets/css/variable";
 .link {
-  color: #5C56A1;
+  color: $lilas;
   height: 30px;
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
   text-align: center;
-  border: 1px solid  #F18C8C;
+  border: 1px solid  $red;
   display: block;
   position: relative;
   div {
     position: absolute;
     top:-4px;
     left: -4px;
-    border: 1px solid #F8EA6F;
+    border: 1px solid $orange;
     width: 100%;
     background-color: white;
     a {
