--- a/src/partials/form/form.hbs
+++ b/src/partials/form/form.hbs
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="/assets/css/block.scss" />
+<link rel="stylesheet" href="/assets/css/form.scss" />
 <link rel="stylesheet" href="/assets/css/common.scss" />
 <main>
-    <form class="{{class}}" action="{{action}}">
+    <form class="{{class}}">
         {{> @partial-block }}
     </form>
 </main>
