--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,104 +1,128 @@
-@import "variable";
 .m-10 {
   margin: 10px;
 }
+
 .m-b-10 {
   margin-bottom: 10px;
 }
+
 .m-t-10 {
   margin-top: 10px;
 }
+
 .m-r-10 {
   margin-right: 10px;
 }
+
 .m-l-10 {
   margin-left: 10px;
 }
+
 .m-t-20 {
   margin-top: 20px;
 }
+
 .b-flex{
   display:flex;
   justify-content: space-between;
 }
+
 .float-rigth {
   float: right;
 }
+
 .col-80 {
   width: 80%;
 }
+
 .col-70 {
   width: 70%;
 }
+
 .col-60 {
   width: 60%;
 }
+
 .col-50 {
   width: 50%;
 }
+
 .col-40{
   width: 40%;
 }
+
 .col-30{
   width: 30%;
 }
+
 .col-20{
   width: 20%;
 }
+
 .col-10{
   width: 10%;
 }
+
 .b-a-c {
   margin-right: auto;
   margin-left: auto;
 }
+
 .t-a-c {
   text-align: center;
 }
+
 .custom-st-href {
-  color: $red;
+  color: #f18c8c;
   text-decoration: none;
 }
+
 .bold {
   font-weight: bold;
 }
+
 h1 {
-  color: $lilas;
+  color: #5c56a1;
   font-size: 18px;
   text-align: center;
   font-weight: normal;
 }
-.t-a-c{
-  text-align: center;
-}
+
 .t-a-r{
   text-align: right;
 }
+
 .x36-size {
   font-size: 36px;
 }
+
 .x12-size {
   font-size: 12px;
 }
+
 .b-orange {
-  border: 1px solid $orange;
+  border: 1px solid #f8ea6f;
 }
+
 .b-red {
-  border: 1px solid $red ;
+  border: 1px solid #f18c8c ;
 }
+
 .t-gray {
   color: gray;
 }
+
 ul {
   margin: 0;
   padding: 0;
 }
-.profile_logo {
+
+.profile-logo {
   width: 60px;
-  background-color: $lilas;
+  background-color: #5c56a1;
   border-radius: 50%;
   height: 60px;
-  color: #ffffff;
+  color: #fff;
   text-align: left;
   line-height: 25px;
   margin-top: 15px;
