--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,7 +1,8 @@
-@import "../../assets/css/variable.scss";
+
+
 .btn {
   color: white;
-  background-color: $lilas;
+  background-color: #5c56a1;
   min-width: 200px;
   width: 100%;
   height: 30px;
@@ -9,6 +10,6 @@
   padding-right: 15px;
   line-height: 30px;
   text-align: center;
-  border: 0px;
+  border: 0;
   display: block;
 }
