--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,34 +1,39 @@
-@import "../../assets/css/variable.scss";
+
 .input {
   position: relative;
   margin-bottom: 5px;
+
   input {
-    color: $lilas;
+    color: #5c56a1;
     background-color: transparent;
-    border: 0px;
-    border-bottom: 1px solid $blue;
+    border: 0;
+    border-bottom: 1px solid #bebaed;
     width: 100%;
     height: 30px;
     text-align: left;
-    padding: 0px 5px;
+    padding: 0 5px;
     margin-bottom: 10px;
+
     &:focus {
-      color: $lilas;
+      color: #5c56a1;
     }
+
     &:focus-visible {
-      color: $lilas;
-      outline: 0px
+      color: #5c56a1;
+      outline: 0
     }
 
     &::placeholder {
-      color: $blue;
+      color: #bebaed;
     }
   }
+
   .error {
     position: absolute;
     top:33px;
-    color:$red;
+    color:#f18c8c;
     font-size: 9px;
+    padding: 0 5px;
     line-height: 9px;
   }
 }
