--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,24 +1,27 @@
-@import "../../assets/css/variable";
+
+
 .link {
-  color: $lilas;
+  color: #5c56a1;
   height: 30px;
   padding-left: 15px;
   padding-right: 15px;
   line-height: 30px;
   text-align: center;
-  border: 1px solid  $red;
+  border: 1px solid  #f18c8c;
   display: block;
   position: relative;
+
   div {
     position: absolute;
     top:-4px;
     left: -4px;
-    border: 1px solid $orange;
+    border: 1px solid #f8ea6f;
     width: 100%;
     background-color: white;
+
     a {
       text-decoration: none;
-      color: #B9A705;
+      color: #b9a705;
     }
   }
 }
