--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,13 +1,14 @@
+@import "./../form/variable";
 
 .input {
   position: relative;
   margin-bottom: 5px;
 
   input {
-    color: #5c56a1;
+    color: $blue;
     background-color: transparent;
     border: 0;
-    border-bottom: 1px solid #bebaed;
+    border-bottom: 1px solid $light_blue;
     width: 100%;
     height: 30px;
     text-align: left;
@@ -15,23 +16,23 @@
     margin-bottom: 10px;
 
     &:focus {
-      color: #5c56a1;
+      color: $blue;
     }
 
     &:focus-visible {
-      color: #5c56a1;
+      color: $blue;
       outline: 0
     }
 
     &::placeholder {
-      color: #bebaed;
+      color: $light_blue;
     }
   }
 
   .error {
     position: absolute;
     top:33px;
-    color:#f18c8c;
+    color: $red;
     font-size: 9px;
     padding: 0 5px;
     line-height: 9px;
