Доработки по замечаниям

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,8 +1,8 @@
-@import "./../form/variable";
+@import "./../form/variable.scss";
 
 .btn {
   color: white;
-  background-color: $blue;
+  background-color: $dack_blue;
   min-width: 200px;
   width: 100%;
   height: 30px;
