--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -1,7 +1,7 @@
-@import "./../form/variable";
+@import "./../form/variable.scss";
 
 .link {
-  color: $blue;
+  color: $dack_blue;
   height: 30px;
   padding-left: 15px;
   padding-right: 15px;
