--- a/src/components/form/common.scss
+++ b/src/components/form/common.scss
@@ -1,4 +1,5 @@
 @import "variable.scss";
+h4 {margin: 10px 0}
 
 .m-10 {
   margin: 10px;
@@ -128,4 +129,11 @@ ul {
   text-align: left;
   line-height: 25px;
   margin-top: 15px;
+}
+
+.error {
+  color: $red;
+  font-size: 12px;
+  padding: 0 5px;
+  line-height: 9px;
 }
