--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -12,4 +12,20 @@
   text-align: center;
   border: 0;
   display: block;
+
+  &.disabled {
+    opacity: 0.3;
+  }
+
+  &.btn-default {
+    color: $dack_blue;;
+    background-color: white
+  }
+
+  &.btn-link {
+    border: 1px solid $orange;
+    width: 100%;
+    background-color: white;
+    color: $dark_orange;
+  }
 }
