--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -28,4 +28,11 @@
     background-color: white;
     color: $dark_orange;
   }
+
+  &.btn-danger {
+    border: 1px solid $red;
+    width: 100%;
+    background-color: $red;
+    color: white;
+  }
 }
