Доработка по замечаниям.

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -67,6 +67,11 @@ main {
       width: 100%;
     }
 
+    #chats {
+      height: calc(100vh - 300px);
+      overflow: auto;
+    }
+
     #messages {
       height: calc(100vh - 106px);
       overflow: auto;
